Fix Align

--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -395,6 +395,7 @@
   }
   .footer-section .footer-content1 {
     padding-top: 0;
+    text-align: center;
   }
   /* whychooseus-section */
   .whychooseus-section {
